--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,10 @@ body{
 }
 .navbar{
     box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.3);
-    width: 100%;
+    width: 1348px;
+}
+.burger{
+    display: none;
 }
 .navbar .container{
     display: flex;
@@ -175,6 +178,7 @@ body{
 .buyurtma{
     background-color: #00BAFC;
     padding: 50px;
+    width: 1348px;
 }
 .buyurtma__content{
     text-align: center;
@@ -234,6 +238,7 @@ body{
 .footer-section{
     background-color: #191919;
     color: white;
+    width: 1348px;
 }
 .footer-section .container{
     display: flex;
@@ -255,4 +260,211 @@ body{
 .footer-item__link{
     text-decoration: none;
     color: white;
+}
+@media (max-width:1260px){
+    .container{
+        width: 1040px;
+        margin: 0 auto;
+    }
+    
+}
+@media (max-width:1080px){
+    .container{
+        width: 940px;
+        margin: 0 auto;
+    }
+    .ishlaymiz .container{  
+        width: 940px;
+        margin: 0 auto;
+    }
+}
+@media (max-width:980px){
+    .container{
+        width: 840px;
+        margin: 0 auto;
+    }
+    .ishlaymiz .container{  
+        width: 740px;
+        margin: 0 auto;
+    }
+}
+@media (max-width:980px){
+    .container{
+        max-width: 740px;
+        margin: 0 auto;
+    }
+    .ishlaymiz .container{  
+        width: 740px;
+        margin: 0 auto;
+        transform: translateX(200px);
+    }
+    .nav-list{
+        display: none;
+    }
+    .navbar__logo{
+        width: 50px;
+        height: 50px;
+    }
+    .burger{
+        width: 40px;
+        height: 40px;
+        display: block;
+    }
+    .talablar__content{
+        margin-left: 100px;
+    }
+    .bosqich .container{
+        display: flex;
+        flex-direction: column;
+        transform: translateX(200px);
+    }
+    .bosqich__content{
+        width: 90%;
+        margin: 0 auto;
+        margin-bottom: 20px;
+    }
+    .bosqich__video{
+        width: 90%;
+        margin: 0 auto;
+    }
+    .xizmatlar .container{
+        transform: translateX(200px);
+    }
+}
+@media (max-width:880px){
+    .container{
+        width: 740px;
+        margin: 0 auto;
+    }
+    .bosqich .container{
+        display: flex;
+        flex-direction: column;
+        transform: translateX(300px);
+    }
+    .bosqich__content{
+        width: 100%;
+        text-align: center;
+    }
+    .bosqich__video{
+        width: 100%;
+        margin: 0 auto;
+        transform: translateX(100px);
+    }
+    .xizmatlar .container{
+        transform: translateX(300px);
+    }
+    .ishlaymiz .container{  
+        width: 740px;
+        margin: 0 auto;
+        transform: translateX(300px);
+    }
+}
+@media (max-width:780px){
+    .container{
+        width: 640px;
+        margin: 0 auto;
+    }
+    .navbar{
+        height: 100px;
+    }
+    .navbar__logo{
+        margin-top: 20px;
+        width: 90px;
+    }
+    .burger{
+        margin-top: 20px;
+        width: 90px;
+    }
+    .bosqich__content-title{
+        font-size: 50px;
+    }
+    .bosqich__content-text{
+        font-size: 30px;
+        margin-bottom: 50px;
+    }
+    .bosqich__content-link{
+        font-size: 30px;
+        padding: 30px;
+    }
+    .iframe{
+        width: 900px;
+        height: 500px;
+    }
+    .bosqich__video{
+        margin-top: 20px;
+        transform: translateX(-70px);
+    }
+    .talablar{
+        display: flex;
+        flex-direction: column;
+    }
+    .talablar__content{
+        width: 100%;
+        text-align: center;
+    }
+    .talablar__content-title{
+        font-size: 50px;
+    }
+    .talablar__content-text{
+        font-size: 30px;
+    }
+    .talabalar-image{
+        width: 100%;
+        margin: 0 auto;
+        transform: translateX(200px);
+
+    }
+    .talabalar-image__photo{
+        width: 100px;
+        margin: 0 auto;
+    }
+    .xizmatlar__content-title{
+        font-size: 50px;
+    }
+    .xizmatlar__content-text{
+        font-size: 30px;
+    }
+    .xizmatlar-item{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 800px;
+        margin: 0 auto;
+        margin: 10px;
+    }
+    .xizmatlar-link{
+        display: flex;
+        flex-direction: column;
+    }
+    .xizmatlar-link__buyurtma{
+        font-size: 30px;
+        padding: 30px;
+    }
+    .xizmatlar-link__sahifa{
+        font-size: 30px;
+        padding: 30px;
+    }
+    .buyurtma__content-title{
+        font-size: 50px;
+    }
+    .buyurtma__content-title{
+        font-size: 30px;
+    }
+    .form-section{
+        width: 800px;
+        height: 500px;
+    }
+    .label__input{
+        width: 700px;
+        height: 100px;
+    }
+    .fill__select{
+        width: 700px;
+        height: 100px;
+    }
+    .submit{
+        font-size: 30px;
+        padding: 20px;
+    }
+
 }
