--- a/css/style.css
+++ b/css/style.css
@@ -466,7 +466,7 @@ body{
         font-size: 30px;
         padding: 20px;
     }
-    .footer{
+    .footer-section{
         display: none;
     }
 
